@@ -1,3 +1,10 @@
+2008-07-20  Ulrich Drepper  <drepper@redhat.com>
+
+	* locale/setlocale.c (setname): Remove inline to avoid compiler
+	warning.
+
+	* locale/setlocale.c (setlocale): Take the setlocale lock earlier.
+
 2008-07-15  Ulrich Drepper  <drepper@redhat.com>
 
 	* stdio-common/vfprintf.c (_IO_helper_overflow): In case _IO_sputn
